@@ -1,3 +1,7 @@
+2007-07-30  Brian Gough  <bjg@network-theory.co.uk>
+
+	* history.c: removed (unused file)
+
 2007-02-20  Brian Gough  <bjg@network-theory.co.uk>
 
 	* vector_bfgs2.c (vector_bfgs2_iterate): use positive step size
